--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,12 +1,19 @@
 @font-face {
-  font-family: "icones";
+  font-family: 'icones';
   src: url(../font/icones.ttf);
 }
 
 body {
   background-color: #1d232a;
   color: #ffffff;
-  font-family: "Open Sans", "icones", sans-serif;
+  font-family: 'Open Sans', 'icones', sans-serif;
+}
+
+@media screen and (min-width: 1440px) {
+  body {
+    display: grid;
+    grid-template-columns: auto 1fr;
+  }
 }
 
 /* CABEÇALHO */
@@ -20,17 +27,70 @@ body {
 }
 
 .cabecalho__menu i::before {
-  content: "\e904";
+  content: '\e904';
   font-size: 24px;
 }
 
 .cabecalho__notificacao i::before {
-  content: "\e906";
+  content: '\e906';
   font-size: 24px;
 }
 
 .cabecalho__logo {
   width: 40px;
+}
+
+.cabecalho__perfil {
+  display: none;
+}
+
+@media screen and (min-width: 1440px) {
+  .cabecalho {
+    background-color: #1d232a;
+    box-sizing: border-box;
+    column-gap: 32px;
+    display: grid;
+    grid-column: 2;
+    grid-template-columns: 1fr auto;
+    height: 80px;
+    padding: 16px 60px;
+  }
+
+  .cabecalho__menu {
+    display: none;
+  }
+
+  .cabecalho__logo {
+    display: none;
+  }
+
+  .cabecalho__perfil {
+    align-items: center;
+    border-right: 1px solid #95999c;
+    color: #95999c;
+    display: grid;
+    column-gap: 8px;
+    grid-template-columns: repeat(3, auto);
+    justify-self: flex-end;
+    padding: 8px 32px;
+  }
+
+  .cabecalho__perfil::before {
+    background-image: url('../img/profile_2.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: '';
+    display: block;
+    height: 32px;
+    width: 32px;
+  }
+
+  .cabecalho__perfil::after {
+    color: #ffffff;
+    content: '\e90d';
+    font-size: 1.5rem;
+  }
 }
 
 /* MENU LATERAL */
@@ -71,7 +131,7 @@ body {
 }
 
 .menu-lateral__link::before {
-  content: "";
+  content: '';
   font-size: 24px;
   left: 24px;
   position: absolute;
@@ -80,27 +140,36 @@ body {
 }
 
 .menu-lateral__link--inicio::before {
-  content: "\e902";
+  content: '\e902';
 }
 
 .menu-lateral__link--videos::before {
-  content: "\e90e";
+  content: '\e90e';
 }
 
 .menu-lateral__link--picos::before {
-  content: "\e909";
+  content: '\e909';
 }
 
 .menu-lateral__link--integrantes::before {
-  content: "\e903";
+  content: '\e903';
 }
 
 .menu-lateral__link--camisas::before {
-  content: "\e900";
+  content: '\e900';
 }
 
 .menu-lateral__link--pinturas::before {
-  content: "\e90a";
+  content: '\e90a';
+}
+
+@media screen and (min-width: 1440px) {
+  .menu-lateral {
+    grid-column: 1;
+    grid-row: 1 / span 2;
+    position: static;
+    width: 200px;
+  }
 }
 
 /* CARTÃO */
@@ -115,11 +184,36 @@ body {
   font-weight: 700;
 }
 
+@media screen and (min-width: 1440px) {
+  .principal {
+    column-gap: 32px;
+    display: grid;
+    grid-column: 2;
+    grid-template-areas:
+    "titulo-pagina titulo-pagina titulo-pagina"
+    "destaque-video destaque-video videos-recentes"
+    "secao-videos secao-videos secao-videos"
+    "produtos-recentes destaque-produtos destaque-produtos"
+    "secao-produtos secao-produtos secao-produtos"
+    ;
+    grid-template-columns: auto 1fr auto;
+    padding: 16px 60px;
+  }
+
+  .titulo-secao {
+    grid-column: span 4;
+  }
+}
+
 .cartao {
   background-color: #2c343a;
   border-radius: 15px;
   overflow: hidden;
   width: 100%;
+}
+
+.cartao__imagem--desktop {
+  display: none;
 }
 
 .cartao--destaque {
@@ -156,12 +250,17 @@ body {
 }
 
 .cartao__info--tempo::before {
-  content: "\e90c";
+  content: '\e90c';
   margin-right: 8px;
 }
 
 .cartao__info--visualizacao::before {
-  content: "\e90f";
+  content: '\e90f';
+  margin-right: 8px;
+}
+
+.cartao__info--valor::before {
+  content: '\e905';
   margin-right: 8px;
 }
 
@@ -178,7 +277,12 @@ body {
 }
 
 .cartao__botao--play::before {
-  content: "\e90b";
+  content: '\e90b';
+  font-size: 24px;
+}
+
+.cartao__botao--carrinho::before {
+  content: '\e901';
   font-size: 24px;
 }
 
@@ -191,6 +295,80 @@ body {
   margin-right: 8px;
 }
 
+.cartao--recentes {
+  display: none;
+}
+
+@media screen and (min-width: 1440px) {
+  .cartao--destaque {
+    margin-bottom: 0;
+  }
+
+  .cartao__imagem--desktop {
+    display: block;
+  }
+
+  .cartao__imagem--mobile {
+    display: none;
+  }
+
+  /* BOTÃO PEQUENO
+  .cartao__botao--destaque {
+    grid-column: auto;
+    padding: 16px 8px;
+  } */
+
+  .cartao--recentes {
+    align-items: center;
+    align-self: flex-start;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: auto auto;
+    padding: 16px;
+    row-gap: 24px;
+    width: 256px;
+  }
+
+  .cartao--recentes .cartao__titulo {
+    grid-column: auto;
+  }
+
+  .cartao__link {
+    color: #0480dc;
+    font-size: 0.8rem;
+    font-weight: 600;
+    justify-self: flex-end;
+  }
+
+  .cartao__lista {
+    display: grid;
+    grid-column: span 2;
+    row-gap: 16px;
+  }
+
+  .cartao__item {
+    display: grid;
+    gap: 8px;
+    grid-template-columns: auto 1fr;
+  }
+
+  .cartao__item-thumbnail {
+    grid-row: span 2;
+    width: 32px;
+  }
+
+  .cartao__item-titulo {
+    font-size: 0.9rem;
+    line-height: 1.2rem;
+    font-weight: 700;
+  }
+
+  .cartao__item-perfil {
+    color: #95999c;
+    font-size: 0.8rem;
+  }
+}
+
 .secao {
   display: grid;
   gap: 16px;
@@ -199,4 +377,35 @@ body {
 .titulo-secao {
   font-size: 1.2rem;
   font-weight: 700;
+}
+
+@media screen and (min-width: 1440px) {
+  .secao {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .destaque-video {
+    grid-area: destaque-video;
+  }
+  
+  .videos-recentes {
+    grid-area: videos-recentes;
+  }
+  
+  .secao-videos {
+    grid-area: secao-videos;
+  }
+  
+  .destaque-produtos {
+    grid-area: destaque-produtos;
+  }
+  
+  .produtos-recentes {
+    grid-area: produtos-recentes;
+  }
+  
+  .secao-produtos {
+    grid-area: secao-produtos;
+  }
+  
 }
